k8s/kustomize/components/podinfo-frontend/resources/ingress--frontend.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: REPLACE_ME_INGRESS_PREFIX.REPLACE_ME_BASE_URL
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
